--- a/src/pages/maps/maps.component.html
+++ b/src/pages/maps/maps.component.html
@@ -1,7 +1,7 @@
 
-<div>
+<div class="container-fluid">
     <div id="map-one" class="map"></div>
-    <div id="popup" class="ol-popup">
+    <div *ngIf="dispalyPopUp" id="popup" class="ol-popup">
         <a href="#" id="popup-closer" class="ol-popup-closer"></a>
         <div id="popup-content"></div>
    </div>
