updated div and css

--- a/src/pages/maps/maps.component.html
+++ b/src/pages/maps/maps.component.html
@@ -1,5 +1,4 @@
-
-<div class="container-fluid">
+<div >
     <div id="map-one" class="map"></div>
     <div *ngIf="dispalyPopUp" id="popup" class="ol-popup">
         <a href="#" id="popup-closer" class="ol-popup-closer"></a>
