--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+
+.ol-control button {
+    font-size: 1.5em;
+  }
+  
+   .ol-zoom-in {
+    border-radius: 2px 2px 0 0;
+  }
+  .ol-zoom {
+    top: .5em;
+    left: .5em;
+  }
+  
+  .ol-control button, .ol-attribution, .ol-scale-line-inner {
+    font-family: 'Lucida Grande',Verdana,Geneva,Lucida,Arial,Helvetica,sans-serif;
+  }
+  
+  .ol-control {
+    position: absolute;
+      background-color: rgba(255,255,255,.4);
+      border-radius: 4px;
+      padding: 2px;
+      display: block;
+  }
+  .ol-control button {
+    display: block;
+    margin: 1px;
+    padding: 0;
+    color: #fff;
+    font-size: 1.14em;
+    font-weight: 700;
+    text-decoration: none;
+    text-align: center;
+    height: 1.375em;
+    width: 1.375em;
+    line-height: .4em;
+    background-color: rgba(0,60,136,.5);
+    border: none;
+    border-radius: 2px;
+  }
